<resources>
    <string name="app_name">PR008CardView</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cuenta">Cuenta</string>
    <string name="propina">Propina</string>
    <string name="moneda">€</string>
    <string name="porcentaje">% Prop.</string>
    <string name="simboloPorcentaje">%</string>
    <string name="total">Total</string>
    <string name="redondear">Redondear</string>
    <string name="comensales">Comensales</string>
    <string name="totalComensales">Por Comensal</string>
    <string name="limpiar">Limpiar</string>
</resources>
